# particle_life

./: Cargo.toml
src/: compute.rs  data.rs  draw.rs  main.rs  ui.rs
