[package]
name = "bevy_particle_life"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
opt-level = "z"

[dependencies]
bevy = { version = "0.15.3" }
bevy_egui = { version = "0.33.0", features = ["manage_clipboard"] }
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

[features]
default = ["hot-reload"]
hot-reload = ["bevy/file_watcher"]
